Completed font rendering and fixed unknown name issue

--- a/lib/i10n/app_en.arb
+++ b/lib/i10n/app_en.arb
@@ -32,5 +32,7 @@
   "renderingPreview": "Rendering Preview",
   "recentlyViewed": "Recently Viewed",
   "allCharacters": "All Characters",
-  "characters": "Characters"
+  "characters": "Characters",
+  "script": "Script",
+  "noSavedCharacters": "No saved characters"
 }
